--- a/.scribe/endpoints.cache/02.yaml
+++ b/.scribe/endpoints.cache/02.yaml
@@ -17,6 +17,7 @@ endpoints:
       authenticated: true
       custom: []
     headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters: []
@@ -29,12 +30,15 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":[{"id":27,"first_name":"Weldon","last_name":"Brakus","email_verified_at":"2024-01-05T19:44:20.000000Z","created_at":"2024-01-05T19:44:21.000000Z","updated_at":"2024-01-05T19:44:21.000000Z"},{"id":28,"first_name":"Delphine","last_name":"Considine","email_verified_at":"2024-01-05T19:44:21.000000Z","created_at":"2024-01-05T19:44:21.000000Z","updated_at":"2024-01-05T19:44:21.000000Z"}],"links":{"first":"\/?page=1","last":"\/?page=1","prev":null,"next":null},"meta":{"current_page":1,"from":1,"last_page":1,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"\/?page=1","label":"1","active":true},{"url":null,"label":"Next &raquo;","active":false}],"path":"\/","per_page":10,"to":2,"total":2}}'
+        content: '{"data":{"id":14,"first_name":"Boris","last_name":"Lueilwitz","email":"tillman.ophelia@example.net","email_verified_at":"2024-01-05T20:01:06.000000Z","created_at":"2024-01-05T20:01:06.000000Z","updated_at":"2024-01-05T20:01:06.000000Z"}}'
         headers: []
         description: ''
         custom: []
     responseFields: []
-    auth: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer a8c15k3Phd46vVgabZeE6fD'
     controller: null
     method: null
     route: null
