--- a/.scribe/endpoints.cache/02.yaml
+++ b/.scribe/endpoints.cache/02.yaml
@@ -30,7 +30,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":{"id":14,"first_name":"Boris","last_name":"Lueilwitz","email":"tillman.ophelia@example.net","email_verified_at":"2024-01-05T20:01:06.000000Z","created_at":"2024-01-05T20:01:06.000000Z","updated_at":"2024-01-05T20:01:06.000000Z"}}'
+        content: '{"data":{"id":18,"uuid":"d3e1995b-f712-4606-a365-8b564157f22d","first_name":"Declan","last_name":"Wolf","email":"morissette.jaylen@example.org","email_verified_at":"2024-01-09T20:25:31.000000Z","created_at":"2024-01-09T20:25:31.000000Z","updated_at":"2024-01-09T20:25:31.000000Z"}}'
         headers: []
         description: ''
         custom: []
@@ -38,7 +38,104 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer a8c15k3Phd46vVgabZeE6fD'
+      - 'Bearer cZe6a41fg6vb3adP8Dhk5EV'
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - GET
+    uri: 'api/v1/users/{uuid}'
+    metadata:
+      groupName: Users
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: true
+      custom: []
+    headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters:
+      uuid:
+        name: uuid
+        description: ''
+        required: true
+        example: 80c4d732-1106-3c34-9295-69c31b06ae90
+        type: integer
+        enumValues: []
+        exampleWasSpecified: false
+        custom: []
+    cleanUrlParameters:
+      uuid: 80c4d732-1106-3c34-9295-69c31b06ae90
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses:
+      -
+        status: 401
+        content: '{"message":"Unauthenticated."}'
+        headers:
+          cache-control: 'no-cache, private'
+          content-type: application/json
+          access-control-allow-origin: '*'
+        description: null
+        custom: []
+    responseFields: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer Z3gPk654cae1V6aEfbhvdD8'
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - DELETE
+    uri: 'api/v1/users/{uuid}'
+    metadata:
+      groupName: Users
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: true
+      custom: []
+    headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters:
+      uuid:
+        name: uuid
+        description: ''
+        required: true
+        example: a337dd3f-6adf-30ed-accb-2de0f40b0f23
+        type: integer
+        enumValues: []
+        exampleWasSpecified: false
+        custom: []
+    cleanUrlParameters:
+      uuid: a337dd3f-6adf-30ed-accb-2de0f40b0f23
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses: []
+    responseFields: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer 146d6PgZvafeEDha8ckbV35'
     controller: null
     method: null
     route: null
